# agent-realestate

./: .gitignore  CHARTER.md  HANDOFF-gongsi.md  LICENSE  README.md  REVIEW_GAPS.md  fetch_molit_recent_11gu.py  pyproject.toml  regen_reports.py
.github/workflows/: ci.yml
agent_realestate/: __init__.py  bus.py  capability.py  cli.py  config.py  demo.py  domain.py  policy_params.py
agent_realestate/analysts/: compset.py  compset_signals.py  decision_prior.py  finance.py  location.py  redev.py  regime.py  risk.py  scoring.py  sensitivity.py  trend.py  trust.py
agent_realestate/cache/: store.py
agent_realestate/collectors/: gongsi.py  kakao.py  kapt.py  kb_sise.py  lawd.py  molit.py  naver_live.py  naver_nav.py  naver_overview.py  naver_region.py  seoul_redev.py  terrain.py
blog/: build_explorer.py  build_site.py  cron_daily.sh  daily_publisher.py  naver_teaser.py  run_daily.py  tistory_draft.py  tistory_publish.py  tistory_publish_pw.py
cron/: com.agentrealestate.freshness.plist  run_agent_realestate.sh
examples/: jeonse_ratio_ts_20260604.json  regime_inputs_20260604.json
hooks/: adr_audit.sh  adr_gate.sh
tests/: test_blog_tier.py  test_cache.py  test_compset.py  test_compset_signals.py  test_decision_prior.py  test_doc_sync.py  test_domain.py  test_email.py  test_external_collectors.py  test_finance.py  test_jusang_scoring.py  test_kapt.py  test_kb_sise.py  test_molit.py  test_nav.py  test_naver_region.py  test_overview.py  test_pipeline.py  test_policy_params.py  test_regime.py  test_supplements.py  test_supplements2.py  test_trend.py  test_trust.py
(+5 files in other folders)
